--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ruback",
     "version": "1.0.0",
     "description": "Express Backend Base working with Controller Decorators",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
