--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-    "name": "ruback",
-    "version": "1.0.0",
+    "name": "@ruanfergui/ruback",
+    "version": "1.0.19",
     "description": "Express Backend Base working with Controller Decorators",
     "main": "index.ts",
+    "module": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "files": [
+        "index.ts",
+        "dist"
+    ],
+    "scripts": {
+        "build": "rm -rf dist/ && prettier --write src/ && npm run build:esm && npm run build:cjs",
+        "build:esm": "tsc",
+        "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
     },
     "author": "Ruan Fernandes",
     "license": "ISC",
@@ -15,9 +25,21 @@
         "@types/node": "^18.16.2",
         "typescript": "^5.0.4"
     },
-    "dependencies": {
+    "type": "module",
+    "peerDepndencies": {
         "express": "^4.18.2",
         "cors": "^2.8.5",
         "reflect-metadata": "^0.1.13"
-    }
+    },
+    "directories": {
+        "example": "examples"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RuanFernandes/RuServer.git"
+    },
+    "bugs": {
+        "url": "https://github.com/RuanFernandes/RuServer/issues"
+    },
+    "homepage": "https://github.com/RuanFernandes/RuServer#readme"
 }
