--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-**/node_modules
-.prettierrc
-main.ts
-npm_package_release/ruserver/dist/
-npm_package_release/testing/node_modules
-npm_package_release/testing/package-lock.json
-npm_package_release/testing/dist/
+**/node_modules/
