--- a/ruserver/package.json
+++ b/ruserver/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ruserver",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -34,6 +34,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "winston": "^3.8.2"
     }
 }
