--- a/ruserver/package.json
+++ b/ruserver/package.json
@@ -1,12 +1,16 @@
 {
     "name": "ruserver",
-    "version": "1.0.6",
+    "version": "1.1.2",
     "description": "",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
         "/dist"
     ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RuanFernandes/RuServer.git"
+    },
     "keywords": [
         "express",
         "api",
