--- a/ruserver/package.json
+++ b/ruserver/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ruserver",
-    "version": "1.1.2",
-    "description": "",
+    "version": "1.1.4",
+    "description": "(not-tested, please use older versions for now [improving the code])",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
