--- a/ruserver/package.json
+++ b/ruserver/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ruserver",
-    "version": "1.1.95",
+    "version": "1.2.1",
     "description": "Biblioteca feita com o express para criar um servidor de forma mais simples e rápida, com suporte a decorators e controllers.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -38,7 +38,6 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "reflect-metadata": "^0.1.13",
-        "winston": "^3.8.2"
+        "reflect-metadata": "^0.1.13"
     }
 }
